--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bignumber.js": "^9.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ethers": "^5.0.7",
     "express": "^4.17.1",
